Fix ExP bar overflow at diamond rank

--- a/play.css
+++ b/play.css
@@ -2231,7 +2231,7 @@ form .uiTheme {
 }
 
 #rankExpBar {
-  width: calc((var(--rank-exp) / var(--rank-total-exp)) * 100%);
+  width: calc((min(var(--rank-exp), var(--rank-total-exp)) / var(--rank-total-exp)) * 100%);
 }
 
 #weekExpBar {
